objects/nBRIDGER__OFAC_Request__c.object
<CustomObject>
    <description>Object to hold the OFAC request</description>
    <fields>
        <fullName>nBRIDGER__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OFAC_Requests</relationshipLabel>
        <relationshipName>OFAC_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Birthdate__c</fullName>
        <label>Birthdate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Engine__c</fullName>
        <description>The engine received</description>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Entity_Type__c</fullName>
        <label>Entity_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Is_Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Name__c</fullName>
        <description>Request Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Object_Id__c</fullName>
        <description>Request was triggered from this Object (Account, Loan, Package)</description>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Postal_Code__c</fullName>
        <label>Postal_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Reason2__c</fullName>
        <description>Reasons this OFAC Request was made.</description>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Reason__c</fullName>
        <description>--DEPRECATED-- Reasons this OFAC Request was made.</description>
        <label>-D Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__SSN__c</fullName>
        <label>SSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Send_Date__c</fullName>
        <description>The date/time in which the request was made</description>
        <label>Send_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__TIN__c</fullName>
        <description>Tax Identification Number</description>
        <inlineHelpText>Account TIN</inlineHelpText>
        <label>TIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OFAC_Request</label>
    <nameField>
        <label>OFAC_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>